--- a/Retuow/Retuow/Content/Site.css
+++ b/Retuow/Retuow/Content/Site.css
@@ -4,7 +4,7 @@
 body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-color:lightgray;
+    background-color: #efefefs;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -73,7 +73,7 @@ textarea {
         z-index: -1;
         bottom: 3px;
         height: 0;
-        border: 4px solid #FFCC22;
+        border: 4px solid #FF8300;
         border-radius: 10px;
     }
 
@@ -105,7 +105,7 @@ textarea {
     height: 200px;
     border-top-right-radius: 110px;
     border-bottom-right-radius: 110px;
-    border: 8px solid #FFCC22;
+    border: 8px solid #FF8300;
     border-left: 0;
     position: absolute;
     top: 60px;
@@ -120,7 +120,7 @@ textarea {
     height: 160px;
     border-top-left-radius: 110px;
     border-bottom-left-radius: 110px;
-    border: 8px solid #FFCC22;
+    border: 8px solid #FF8300;
     border-right: 0;
     position: absolute;
     top: 132px;
