--- a/Retuow/Retuow/Views/Home/Index.cshtml
+++ b/Retuow/Retuow/Views/Home/Index.cshtml
@@ -13,4 +13,22 @@
         <div class="half-circle-left"></div>
     </div>
     <p class="primary-underline lastname-underline" id="lastname"> Vande Velde </p>
+    
 </div>
+
+
+<div>@Html.ActionLink("Go to About", "About", "Home", routeValues: new { }, htmlAttributes: new { @class = "btn btn-default" })</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="btn" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">Features</a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+            <a class="nav-item nav-link" href="#">Disabled</a>
+        </div>
+    </div>
+</nav>
